--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "taskmaster",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AlexandrKlychnikov.github.io/TaskMaster/",
+  "homepage": "/taskmaster",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/x-date-pickers": "^5.0.12",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -30,12 +31,13 @@
     "lint-staged": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.3",
+    "react-hook-form": "^7.41.1",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "tsup": "^6.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
