--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.1",
-    "i18next": "^22.0.6",
+    "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.2",
     "jest": "^27.5.1",
     "lint-staged": "^13.0.3",
+    "material-ui-popup-state": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
-    "react-i18next": "^12.0.0",
+    "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
